--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
     <div class="main">
 			<h1 class="main__title">Git</h1>
+			<div class="main__box">
+				<p class="main__box-text">git add, git commit, git push</p>
+			</div>
 		</div>
   </body>
 </html>
